syntax = "proto3";
package toktik.service.wechat.db;
option go_package = "toktik/service/wechat/db";

message ChatMessage {
  string msg = 3;
  int64 time = 4;
}
